11. Поиск дубликатов [#315066 #469195]